Cascading Change Log

3.0.0 [unreleased]

  Removed the deprecated c.t.PlatformRunner, c.t.HadoopPlatform, and c.t.LocalPlatform. See c.p.PlatformRunner,
  c.p.h.HadoopPlatform, and c.p.l.LocalPlatform as alternatives.

  Removed the deprecated c.f.h.HadoopFlowConnector from the cascading-hadoop2-mr1 sub-project.

  Removed all deprecated methods, constructors, enums, and constants.

  Removed the deprecated c.o.a.Max, c.o.a.Min, and c.o.a.ExtremaBase classes. See c.o.a.MaxValue and c.o.a.MinValue
  classes as alternatives.

  Removed the deprecated c.t.h.TemplateTap, c.t.l.TemplateTap, and c.t.BaseTemplateTap classes and associated tests.

  Fixed issue where a start/stop race condition in c.c.Cascade could allow a downstream c.f.Flow to start when a
  predecessor fails.

  Update janino to 2.7.6.

  Added support for Apache Tez. See README for details.

  Added c.f.FlowRuntimeProps to allow for setting cluster side specific properties per c.f.Flow instance in a platform
  independent manner.

  Changed planner to disallow duplicate c.p.Pipe head and tail names.

  Updated c.f.p.FlowPlanner to use generalized isomorphic sub-graph matching rules to apply platform specific plan
  assertions, transforms, and step partitioning.

2.6.2

  Fixed issue where c.s.h.SequenceFile default ctor would throw an NPE.

  Updated c.u.Version to warn if multiple 'cascading/version.properties' files are present on the classpath.

  Fixed issue where a c.p.a.Coerce constructor would throw a j.l.IllegalArgumentException on a valid types argument.

  Fixed issue where c.t.TapPlatformTest was not preserving properties coming from the TestPlatform when creating a Flow
  causing remote test failures.

  Fixed issue in c.p.h.Hadoop2MR1Platform causing tests to not properly run on a remote cluster when configured to do
  so.

2.6.1

  Updated c.p.h.Hadoop2MR1Platform to enforce settings to make local mode behave the same across distributions.
